# fflogsapi

./: .codecov.yml  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  config.py  metric_reqs.txt  metrics.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  get_started.rst  index.rst  user_flow.rst
fflogsapi/: __init__.py  client.py  constants.py  data.py  fflogsapi.py  queries.py  user_auth.py
fflogsapi/characters/: __init__.py  character.py  character_page.py  client_extensions.py  dataclasses.py  pages.py  queries.py
fflogsapi/data/: .gitignore  __init__.py  dataclasses.py  fight.py  misc.py  page.py  queries.py  report.py
fflogsapi/data/phases/: omega.py
fflogsapi/data/rois/: __init__.py  alexander.py  phases.py
fflogsapi/game/: __init__.py  client_extensions.py  dataclasses.py  pages.py  queries.py
fflogsapi/guilds/: __init__.py  client_extensions.py  dataclasses.py  guild.py  pages.py  queries.py
fflogsapi/iterators/: pageiterator.py  report_iterator.py  reportiterator.py  reportpageiterator.py
fflogsapi/parsers/: __init__.py
fflogsapi/prograce/: __init__.py  client_extensions.py  queries.py
fflogsapi/reports/: __init__.py  client_extensions.py  dataclasses.py  fight.py  pages.py  queries.py  report.py  report_page.py
fflogsapi/user/: __init__.py  client_extensions.py  queries.py  user.py
fflogsapi/util/: __init__.py  decorators.py  filters.py  gql_enums.py  indexing.py
fflogsapi/world/: __init__.py  client_extensions.py  dataclasses.py  encounter.py  expansion.py  pages.py  queries.py  region.py  server.py  zone.py
tests/: config.py  test_caching.py  test_fights.py  test_reports.py
tests/characters/: test_characters.py
tests/client/: test_caching.py
tests/game/: test_abilities.py  test_game_misc.py  test_items.py  test_maps.py
tests/guilds/: test_guilds.py
tests/prograce/: test_progress_race.py
tests/reports/: .gitignore  test_fights.py  test_phases.py  test_reports.py  test_rois.py
tests/user/: test_user.py
tests/world/: test_encounter.py  test_expansion.py  test_region.py  test_server.py  test_subregion.py  test_zone.py
