[project]
name = 'fflogsapi'
version = '2.0.2'
description = 'Python client for the FF Logs v2 API'
readme = 'README.md'
authors = [
    { name = 'Markus Wang Halvorsen', email = 'mwh@halvorsenfamilien.com' },
]
keywords = ['api', 'client', 'ffxiv', 'fflogs', 'lazy']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python :: 3.9',
    'Topic :: Software Development :: Libraries',
]
dependencies = [
    'gql~=3.4.0',
    'oauthlib~=3.2.2',
    'requests_oauthlib~=1.3.1',
    'requests_toolbelt~=0.10.1',
    'cryptography~=39.0.1',
    'urllib3~=1.26.14',
]

[project.optional-dependencies]
dev = [
    'flake8==6.0.0',
    'autopep8==2.0.1',
    'isort==5.12.0',
    'removestar==1.3.1',
    'sphinx==7.2.5',
]
test = [
    'pytest==7.2.1',
    'pytest-cov==4.0.0',
]

[project.urls]
Repository = 'https://github.com/halworsen/fflogsapi'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
include = ['fflogsapi*']

[tool.isort]
include_trailing_comma = true
line_length = 100
src_paths = ['fflogsapi', 'tests']

[tool.autopep8]
max-line-length = 100
in-place = true
recursive = true

[tool.pytest.ini_options]
# you typically do not want to run this as it nukes the query caches
addopts = '--ignore=tests/client/test_caching.py'
